fixed the alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,7 +252,7 @@ ul{
 .timeline-content{
 
 	background-image: image-url("timeline_dot.png");
-	background-position: 0px 37px;
+	background-position: 0px 39px;
 	background-repeat: no-repeat;
 	list-style: none outside none;
 	margin-left: -10px;
